--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "express-vue": "^5.6.6",
     "mongoose": "^5.2.5",
     "nconf": "^0.10.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "referrer": "^1.0.2",
     "referrer-policy": "^1.1.0",
     "vue": "^2.5.2",
